# BCItp

./: .gitignore  .gitignore.save  .gitmodules  .travis.yml  AcquisitionSettings.py  BCIMenu.py  CalMenu.py  CalSettings.py  CalStart.py  DataProcessing.py  DataProcessingSettings.py  GUI.py  GUIControl.py  GUI_slots.py  GameMenu.py  MlMenu.py  OpenBCISettings.py  Plotter.py  PreCalMenu.py  PreCalSettings.py  PreCalStart.py  README.md  SampleManager.py  ScreenStart.py  UISettingsScreen.py  ValMenu.py  ValSettings.py  ValStart.py  __main__.py  data_processing.py  debug.txt  dependencies.txt  interface_noros.py  main.py  mne_CSPLDA_cv.py  open_bci_playback.py  open_bci_simu.py  open_bci_v3.py  pytest.ini  readme.md  (+8 more)
TCC/: CMakeLists.txt  meubuffer.py
bci_training_platform/: CMakeLists.txt  bci_training_platform.launch  bci_training_platform.launch~  gui.launch~  package.xml
bcitp/: __main__.py  main.py
docs/: Makefile  all-about-me.rst  conf.py  docs-requirements.txt  index.rst  make.bat
hardware/: ardrone_ros.py  open_bci_playback.py  open_bci_v3.py
screens/: BCIMenu.py  ScreenStart.py  bcimenu.kv  menus.py  screenstart.kv  start_screen.py
scripts/: user_interface.py
settings/: AcquisitionSettings.py  DataProcessingSettings.py  UISettingsScreen.py
signal_processing/: DataManipulation.py  DataProcessing.py  algorithms.py  approach.py  mne_CSPLDA_cv.py  mne_CSPLDA_eval.py  processing_utils.py  processor.py  utils.py
src/TCC/: fir.py  package.xml
src/TCC/scripts/: filtro.py  filtro.py~  listener.py  listener.py~  talker.py  talker.py~
templates/: game.kv  (+3 more)
(+334 files in other folders)
