<?xml version="1.0"?>
<package>
  <name>TCC</name>
  <version>0.0.0</version>
  <description>The TCC package</description>
  <maintainer email="hieron@todo.todo">hieron</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>scipy</build_depend>
  <build_depend>numpy</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>scipy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
